...
            android:inputType="textPersonName"
            android:fontFamily="sans-serif-condensed"
            android:hint="Name"
            android:textSize="23dip"/>

        <EditText
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:inputType="textEmailAddress"
            android:fontFamily="sans-serif-condensed"
            android:textSize="23dip"
            android:hint="Email Address"/>

        <EditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:inputType="textPassword"
            android:fontFamily="sans-serif-condensed"
            android:textSize="23dip"
            android:hint="Password"/>
...
