...
                <!--android:text="Not login yet!"-->
                <!--app:layout_constraintEnd_toEndOf="parent"-->
                <!--app:layout_constraintStart_toStartOf="parent"-->
                <!--app:layout_constraintTop_toTopOf="parent" />-->

            <!--<Button-->
                <!--android:id="@+id/btn_login"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginStart="8dp"-->
                <!--android:layout_marginTop="8dp"-->
                <!--android:layout_marginEnd="8dp"-->
                <!--android:text="Login"-->
...
